--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -190,7 +190,7 @@ p {
 .inquiry-form {
 
     position: absolute;
-    top: 50%;
+    top: 60%;
     /* Centered vertically */
     left: 60%;
     transform: translateY(-50%);
@@ -297,9 +297,7 @@ p {
 .footer-section {
     background-color: rgb(0, 35, 55);
     color: #fff;
-    position: relative;
-    margin-top: 20%;
-    bottom: 0;
+    margin-top: 24px;
 
 }
 
@@ -419,18 +417,14 @@ p {
 
 
 /* Contact Us Page */
-.contact-form, .loan-form{
+.contact-form{
+    top: -30px;
    position: absolute;
-   top: 130%;
-   left: 50%;
-   transform: translate(-50%, -50%);
+   top: 80%;
+   left: 8%;
    z-index: 2;
 }
-
-.contact-form{
-    width: 80%;
-}
-.contact-container, .contact-info{
+.contact-container{
     padding: 32px;
 }
 
@@ -440,129 +434,6 @@ p {
 .contact-form .contact-info{
     background-color: #002337;
     color: #fff;
+    
   
 }
-
-.contact-number ul{
-    list-style-type: none;
-    padding: 0;
-}
-.contact-number ul li{
-    padding: 0;
-    margin: 0;
-    line-height: 1.80;
-}
-.contact-number a{
-    color: #fff;
-    text-decoration: none;
-    padding: 0;
-}
-
-.contact-number i{
-    color: #F9F404;
-}
-
-.contact-title{
-    font-family: 200;
-}
-
-/* Loan Calculator Page */
-
-.loan-form{
-    position: absolute;
-    top: 110%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    background-color: #fff;
-    width: 60%;
-   padding: 24px;
-   
-}
-
-.loan-form .btn-calculate{
-    background-color: #F9F404;
-    padding: 8px 64px;
-    margin: 24px 24px;
-   
-}
-
-.loan-form .btn-calculate:hover{
-    background-color: #002337;
-    color: #fff;
-}
-
-.loan-form p{
-    font-size: 0.9rem;
-}
-
-/* =================================
-========= Submit Property Page =====
-==================================== */
-.submitProperty{
-    position: absolute;
-    top: 120%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 60%;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    
-}
-.submitProperty .col-panel{
-    background-color: #FFFFFF;
-    padding: 24px;
-    border-radius: 8px;
-    
-}
-
-.submitProperty label{
-    font-size: 1rem;
-    font-weight: 500;
-    margin-bottom: 8px;
-}
-
-.submitProperty label::after {
-    content: " *";
-    color: red; /* Optional: Set color of the asterisk */
-}
-
-
-.submitProperty input{
-    font-size: 16px;
-    border-radius: 6px;
-    line-height: 1.5;
-    padding: 5px 10px;
-    color: rgb(14, 14, 16);
-    background: #F8F8F8;
-    display: block;
-    height: 48px;
-}
-
-.form-button{
-    padding-right: 8px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.btn-form-next, .btn-form-prev{
-    padding: 8px;
-    width: 200px;
-    font-weight: 500;
-}
-
-.btn-form-next{
-    background-color: #F9F404;
-}
-
-.btn-form-prev{
-    border: 1px solid #002337;
-}
-.btn-form-next:hover, .btn-form-prev:hover{
-    background-color: #002337;
-    color: #fff;
-}
-
-
-
-
